<?xml version="1.0"?>
<package format="2">
  <name>vnoid_world</name>
  <version>0.0.0</version>
  <description>The vnoid_world package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
